--- a/test/Lily/Test/Usage/example.html
+++ b/test/Lily/Test/Usage/example.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title></title>
-</head>
-<body>
-  <h1 class="success">Success</h1>
-</body>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1 class="success">Success</h1>
+    <div class="error">An error</div>
+  </body>
 </html>
